# Andas

./: .gitignore  API_REFERENCE.md  CHANGELOG_0.1.1.md  QUICK_START.md  README.md  RELEASE_ANNOUNCEMENT.md  android  settings.gradle.kts
android-pandas/: .gitignore  README.md  build.gradle.kts
android-pandas/src/androidTest/java/cn/ac/oac/libs/andas/: ExampleInstrumentedTest.kt
android-pandas/src/main/cpp/: CMakeLists.txt  data_processing.cpp  double_harsh.cpp  double_harsh.h  math_operations.cpp  native-lib.cpp
android-pandas/src/main/java/cn/ac/oac/libs/andas/: Andas.kt  Test.kt  TestNativeMath.kt
android-pandas/src/main/java/cn/ac/oac/libs/andas/core/: AndaThreadPool.kt  NativeBatch.kt  NativeData.kt  NativeMath.kt
android-pandas/src/main/java/cn/ac/oac/libs/andas/entity/: DataFrame.kt  DataFrameIO.kt  (+1 more)
android-pandas/src/test/java/cn/ac/oac/libs/andas/: AndasCoreTest.kt.bak  CSVReadTest.kt  DataFrameRowTest.kt.bak  ExampleUnitTest.kt  NativeMathTest.kt  PerformanceBenchmarkTest.kt  SimpleCSVTest.kt  TypeInferenceOptimizationTest.kt
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/cn/ac/oac/demo/andas/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: large_dataset.csv
app/src/main/java/cn/ac/oac/demo/andas/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/cn/ac/oac/demo/andas/: DemoTest.kt  ExampleUnitTest.kt
doc/charter2/: series.md
doc/charter3/: dataframe.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
